<resources>
    <string name="app_name">ListAndSpinner-practise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="testing">Testing</string>
    <string name="enter_name">Enter Item Name</string>
    <string name="tittle">Item Details</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="selected_items">Selected Items</string>
    <string name="order">Order</string>
    <string name="decNum">-</string>
    <string name="incNum">+</string>
</resources>