<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SelectedItemFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frag2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tittle"
            android:textAlignment="center"
            android:text="@string/selected_items"
            android:textSize="@dimen/_25sp"
            app:layout_constraintStart_toStartOf="@id/frag2"
            app:layout_constraintEnd_toEndOf="@id/frag2"
            app:layout_constraintTop_toTopOf="@id/frag2"
            />
<Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add"
            android:id="@+id/dySpinner"
            android:layout_margin="20dp"
    app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/tittle"
            app:layout_constraintEnd_toEndOf="@+id/frag2"
            app:layout_constraintStart_toStartOf="@+id/frag2"
    app:layout_constraintBottom_toTopOf="@+id/numberPicker"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incNum"
            android:padding="8dp"
            android:id="@+id/increaseBtn"
            android:background="#A3ADE7"
            app:layout_constraintEnd_toStartOf="@+id/numberPicker"
            app:layout_constraintTop_toBottomOf="@+id/dySpinner"
            app:layout_constraintBottom_toTopOf="@+id/orderBtn"
            />
        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberPicker"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@+id/dySpinner"
            app:layout_constraintStart_toStartOf="@+id/frag2"
            app:layout_constraintBottom_toBottomOf="@+id/orderBtn"
            app:layout_constraintEnd_toEndOf="@+id/frag2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decNum"
            android:id="@+id/decreaseBtn"
            android:clickable="true"
            android:padding="8dp"
            android:background="#A3ADE7"
            app:layout_constraintStart_toEndOf="@+id/numberPicker"
            app:layout_constraintTop_toBottomOf="@+id/dySpinner"
            app:layout_constraintBottom_toTopOf="@+id/orderBtn"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:backgroundTint="#8D9AE7"
            android:id="@+id/orderBtn"
            app:layout_constraintTop_toBottomOf="@+id/numberPicker"
            app:layout_constraintBottom_toBottomOf="@+id/frag2"
            app:layout_constraintStart_toStartOf="@+id/frag2"
            app:layout_constraintEnd_toEndOf="@+id/frag2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>